DarkGray background, fixes blue in the gaps

--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 #header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vw;
-  width: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vw;
+    width: 100vh;
 }
 
-p {height: 200px; width: 200px; background: blue;}
+p {
+    height: 200px;
+    width: 200px;
+    background: darkgray;
+}
